qqs modifs mais aussi qqs problèmes concernant le nombre de lignes qui s'ajoutent.